deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubeinvaders
    spec:
      serviceAccountName: kubeinvaders
      containers:
      - image: docker.io/luckysideburn/kubeinvaders:latest
        name: kubeinvaders
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 128Mi
        ports:
        - containerPort: 8080
