service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: kubeinvaders
